--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             <select id = "themeselect", name = "themeselect">
                 <option value = "1">Light Mode</option>
                 <option value = "0">Dark Mode</option>
+                <option value = "2">Abyss</option>
+                <option value = "3">Amethyst</option>
             </select>
             <input type = "submit", id = "tsbutton", name = "tsbutton", value = "Change Theme", required>
         </form>
